[package]
name = "kz80_action"
version = "0.1.0"
edition = "2021"
description = "Action! language compiler for Z80"
authors = ["Alex Jokela"]
license = "BSD-3-Clause"
repository = "https://github.com/ajokela/kz80_action"
homepage = "https://github.com/ajokela/kz80_action"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
